[package]
name = "cpuminer_stratum_v2"
version = "0.1.0"
edition = "2024"

[dependencies]
bs58 = { version = "0.5.1", features = ["check"] }
clap = { version = "4.5.39", features = ["derive"] }
hex = "0.4.3"
noise_sv2 = "1.3.0"
secp256k1 = "0.28.2" # needs to be the same used in noise_sv2
sha2 = "0.10.9"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
